# revolt

./: .clang-format  .gitignore  .projections.json  CMakeLists.txt  Makefile  README.md  conanfile.txt
data/: cube_vertices.txt
src/: action.h  actions.cpp  actions.h  app.cpp  app.h  camera.cpp  camera.h  chunk.cpp  chunk.h  color.h  common.cpp  common.h  font_book.h  main.cpp  redux.hpp  ui_context.cpp  ui_context.h  window.cpp  window.h
src/actions/: change_current_page_action.h  create_new_world_action.h  load_world_action.h  recreate_chunks_action.h  save_world_action.h
src/components/: block.h  chunk.cpp  chunk.h  current_page.h  in_memory_snapshot.h  position.h  world.h
src/hud/: main_menu_bar.cpp  main_menu_bar.h
src/renderers/: chunk_boundaries_renderer.h  chunk_renderer.cpp  chunk_renderer.h  coordinate_lines_renderer.h  demo_renderer.cpp  demo_renderer.h  main_menu_renderer.cpp  main_menu_renderer.h  new_world_page_renderer.cpp  new_world_page_renderer.h  overlay_renderer.cpp  overlay_renderer.h  renderer.h  root_renderer.cpp  root_renderer.h
src/renderers/chunk_renderer/: chunk.frag  chunk.vert  demo.frag
src/renderers/coordinate_lines_renderer/: coordinate_lines.frag  coordinate_lines.vert
src/renderers/demo_renderer/: demo.frag  demo.vert
src/rendering/: camera.cpp  camera.h  chunk_boundaries_renderer.h  chunk_renderer.h  coordinate_lines_renderer.h  debug_drawing_manager.h  main_menu_renderer.h  new_world_page_renderer.cpp  overlay_renderer.cpp  overlay_renderer.h  renderer.h  root_renderer.cpp  root_renderer.h  shader.cpp  shader.h
src/services/: greedy_mesh.cpp  greedy_mesh.h
src/util/: debug_drawing_manager.cpp  debug_drawing_manager.h  file.h  glm_cereal.h  imgui_helper.cpp  imgui_helper.h  imgui_util.cpp  imgui_util.h  opengl_helper.cpp  opengl_helpers.cpp  opengl_helpers.h  print.h  shader.cpp  shader.h
